Fixed navbar icon - Dark mode

--- a/Css.css
+++ b/Css.css
@@ -319,16 +319,24 @@ body {
   color: var(--bosch-red);
 }
 
+/* Dark Mode */
 [data-theme="dark"] 
 .footer-logo {
   --footer-invert: 1;
     filter: brightness(0) invert(var(--footer-invert, 0));
 }
 
-#tel-num{
+[data-theme="dark"] #tel-num{
     color: var(--text-color) !important;
 }
 
+[data-theme="dark"] .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+[data-theme="dark"] .navbar-toggler {
+  border-color: rgba(255,255,255,0.3);
+}
 
 .social-icons a {
   color: var(--footer-text);
